Initial commit: added portfolio homepage

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE>
 <html>
     <head>
-        <meta charset="UTF-8"
+        <meta charset="UTF-8">
     <title>Pragati's portfolio</title>
     </head>
     <body>
